<resources>
    <string name="app_name">Shopping Management App</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_add_item_dialog">display add item dialog</string>
    <string name="shopping_item_delete_button">shopping item delete button</string>
    <string name="close_dialog_button">close dialog button</string>
    <string name="add_new_item">Add New Item</string>
    <string name="confirm_button">confirm button</string>

    <string-array name="shopping_item_categories">
        <item>clothes</item>
        <item>electronics</item>
        <item>furniture</item>
        <item>groceries</item>
        <item>medicine</item>
        <item>other</item>
    </string-array>
</resources>