<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addShoppingItemDialogFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/llv_dialog"
    tools:context=".fragments.AddShoppingItemDialogFragment">

    <ImageButton
        android:id="@+id/addShoppingItemDialogCloseBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ib_close_dialog_btn"
        android:contentDescription="@string/close_dialog_button"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/addShoppingItemDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_new_item"
        android:textColor="@color/text"
        android:textSize="34sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/addShoppingItemCategoryImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ib_primary"
        android:src="@drawable/other" />

    <LinearLayout
        android:id="@+id/addShoppingItemDialogForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/addShoppingItemNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/addShoppingItemPriceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:suffixText="$">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price (per unit)"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/addShoppingItemAmountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Amount"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            style="@style/SpinnerStyle"
            android:id="@+id/addShoppingItemCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/spinner_add_shopping_item_dialog_category"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/PrimaryButtonStyle"
        android:id="@+id/addShoppingItemDialogAddBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/confirm_button"
        android:text="Add" />

</LinearLayout>